Fixed some miss-aligned elements

--- a/Scrimba Projects/Learn Javascript/Password Generator/index.css
+++ b/Scrimba Projects/Learn Javascript/Password Generator/index.css
@@ -45,5 +45,11 @@ body {
     width: 175px;
     height: 30px;
     border-radius: 5px;
+    text-align: center;
 }
 
+#paragraph-el, #paragraph-el2 {
+    color: #22c55e;
+    text-align: center;
+    margin: 8px;
+}
